[gd_scene load_steps=3 format=3 uid="uid://b0c4poll4kgou"]

[ext_resource type="Script" uid="uid://d4nyy2oh1hs0n" path="res://pause_menu.gd" id="1_hdmo1"]
[ext_resource type="AudioStream" uid="uid://wdb5tblxc525" path="res://assets/audio/Contemplative.ogg" id="2_nwcfo"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
visible = false
script = ExtResource("1_hdmo1")

[node name="BackgroundDim" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="MenuButtons" type="VBoxContainer" parent="BackgroundDim"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -69.5
offset_right = 91.0
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="ContinueButton" type="Button" parent="BackgroundDim/MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Continue"

[node name="SettingsButton" type="Button" parent="BackgroundDim/MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Settings"

[node name="RestartButton" type="Button" parent="BackgroundDim/MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Restart Level"

[node name="ExitButton" type="Button" parent="BackgroundDim/MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Exit to Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nwcfo")
volume_db = -8.0
autoplay = true
parameters/looping = true
